--- a/ISWebApp/ISWebApp.csproj
+++ b/ISWebApp/ISWebApp.csproj
@@ -133,6 +133,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\InnovationViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\css\pages\error\error-3.css" />
