--- a/ISData/ISData.csproj
+++ b/ISData/ISData.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Strings.cs" />
     <Compile Include="Migrations\202206201128546_ISDB3.cs" />
     <Compile Include="Migrations\202206201128546_ISDB3.designer.cs">
       <DependentUpon>202206201128546_ISDB3.cs</DependentUpon>
